...
                selectedTab = 1
            }
            
            Spacer()
            
            TabButton(imageName: selectedTab == 2 ? "PersonFilled" : "Person",
                      isSelected: selectedTab == 2, identifier: "Profile") {
                selectedTab = 2
            }
        }
        .padding(.vertical, 16)
        .padding(.horizontal, 30)
        .frame(height: 44)
...
            UnevenRoundedRectangle(topLeadingRadius: 15, topTrailingRadius: 15)
                    .fill(.white)
                    .shadow(color: .black.opacity(0.2), radius: 5, x: 0, y: -2)
                    .ignoresSafeArea()
        )
        .accessibilityElement(children: .contain)
        .accessibilityIdentifier("NavigationBar")
    }
}

struct TabButton: View {
    let imageName: String
    let isSelected: Bool
...
