...
            .foregroundStyle(Theme.Colors.dark2)
            
            if isPassword {
                Button(action: {
                    showPassword.toggle()
                }) {
                    Image(systemName: showPassword ? "eye.slash.fill" : "eye.fill")
                        .foregroundColor(isFocused ? Theme.Colors.primary1 : Theme.Colors.dark2.opacity(0.5))
                        .accessibilityIdentifier(showPassword ? "eye.slash.fill" : "eye.fill")
                }
                .buttonStyle(PlainButtonStyle())
            }
        }
...
